--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="91f5ca">  <td>25/06/19 00:25:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:2, instance:com.aidasoftware.qa.testcases.LoginTest@644baf4a]">verifyLoginWithInvalidCredentials</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>25/06/19 00:25:22</td>   <td>4776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@644baf4a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>25/06/19 00:24:54</td>   <td>-23205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@644baf4a]">&gt;&gt;setup</td> 
+<tr bgcolor="95e8a7">  <td>25/07/29 19:53:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@14028087]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
