--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95e8a7">  <td>25/08/03 01:43:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@710c2b53]">&gt;&gt;setup</td> 
+<tr bgcolor="d4949f">  <td>25/08/24 02:55:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@4a003cbe]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="95e8a7">  <td>25/08/03 01:43:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@710c2b53]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d4949f">  <td>25/08/24 02:56:12</td>   <td>48455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSQuotationTest.createPOSQuotationTest()[pri:1, instance:com.aidasoftware.qa.testcases.POSQuotationTest@4a003cbe]">createPOSQuotationTest</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
 </table>
